dockerize and readme

--- a/.env
+++ b/.env
@@ -2,10 +2,10 @@ JWT_SECRET="library_management"
 ENABLE_AUTH="0"
 PORT="3000"
 LOG_LEVEL="info"
-REDIS_HOST="localhost"
+REDIS_HOST="redis"
 REDIS_PORT="6379"
-DB_HOST="localhost"
+DB_HOST="db"
 DB_PORT="5432"
-DB_USERNAME="Mert"
-DB_PASSWORD=""
-DB_NAME="postgres"
+DB_USERNAME="admin"
+DB_PASSWORD="123"
+DB_NAME="library"
